[package]
name = "minefield-rs"
version = "0.1.3"
edition = "2021"
authors = ["Bogdan Olar"]
repository = "https://github.com/BogdanOlar/minefield-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["getrandom"] }